--- a/auto/ansible/tasks/set_zone_cfg_scenario_2.yml
+++ b/auto/ansible/tasks/set_zone_cfg_scenario_2.yml
@@ -10,8 +10,15 @@
 - name: Set the zones for scenario 2 without real IPs
   ansible.builtin.set_fact:
     zone_cfg:
-      - [".", "{{ ZONE_DIR }}/2/root.zone"]
-#      - ["p53.", "{{ ZONE_DIR }}/2/p53.zone"]
-      - ["some-servers.p53.", "{{ ZONE_DIR }}/2/some-servers.p53.zone"]
+      - [".", "{{ ZONE_DIR }}/9.2-root"]
+#      - ["net.", "{{ ZONE_DIR }}/9.2-net"]
+      - ["root-servers.net.", "{{ ZONE_DIR }}/9.2-root-servers.net"]
   when: do_realips is defined and do_realips is false
 
+#- name: Set the zones for scenario 2 without real IPs
+#  ansible.builtin.set_fact:
+#    zone_cfg:
+#      - [".", "{{ ZONE_DIR }}/2/root.zone"]
+##      - ["p53.", "{{ ZONE_DIR }}/2/p53.zone"]
+#      - ["some-servers.p53.", "{{ ZONE_DIR }}/2/some-servers.p53.zone"]
+#  when: do_realips is defined and do_realips is false
