--- a/auto/ansible/tasks/set_zone_cfg_scenario_3.yml
+++ b/auto/ansible/tasks/set_zone_cfg_scenario_3.yml
@@ -8,5 +8,11 @@
 - name: Set the zones for scenario 3 without real IPs
   ansible.builtin.set_fact:
     zone_cfg:
-      - [".", "{{ ZONE_DIR }}/3/root.zone"]
+      - [".", "{{ ZONE_DIR }}/9.3-root"]
   when: do_realips is defined and do_realips is false
+
+#- name: Set the zones for scenario 3 without real IPs
+#  ansible.builtin.set_fact:
+#    zone_cfg:
+#      - [".", "{{ ZONE_DIR }}/3/root.zone"]
+#  when: do_realips is defined and do_realips is false
