Hide real IP zone files and alternative IP hints files

--- a/auto/ansible/files/scenarios/GNUmakefile
+++ b/auto/ansible/files/scenarios/GNUmakefile
@@ -121,7 +121,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 
 5_1_DIR=.
 5_1_MKDIR=
-5_1_PREFIX=9.1-
+5_1_PREFIX=.9.1-
 9_1_PREFIX=5.1-
 5_1_NET_UNSIGNED=unsigned/$(5_1_PREFIX)net
 5_1_ROOT=$(5_1_DIR)/$(5_1_PREFIX)root
@@ -139,7 +139,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_2_MKDIR=$(5_2_DIR)/.mkdir
 5_2_DIR=.
 5_2_MKDIR=
-5_2_PREFIX=9.2-
+5_2_PREFIX=.9.2-
 9_2_PREFIX=5.2-
 5_2_ROOT_UNSIGNED=unsigned/$(5_2_PREFIX)root
 5_2_ROOT=$(5_2_DIR)/$(5_2_PREFIX)root
@@ -160,7 +160,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_3_MKDIR=$(5_3_DIR)/.mkdir
 5_3_DIR=.
 5_3_MKDIR=
-5_3_PREFIX=9.3-
+5_3_PREFIX=.9.3-
 9_3_PREFIX=5.3-
 5_3_ROOT_UNSIGNED=unsigned/$(5_3_PREFIX)root
 9_3_ROOT_UNSIGNED=unsigned/$(9_3_PREFIX)root
@@ -175,7 +175,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_3_1_MKDIR=$(5_3_1_DIR)/.mkdir
 5_3_1_DIR=.
 5_3_1_MKDIR=
-5_3_1_PREFIX=9.3.1-
+5_3_1_PREFIX=.9.3.1-
 9_3_1_PREFIX=5.3.1-
 5_3_1_ROOT_UNSIGNED=unsigned/$(5_3_1_PREFIX)root
 9_3_1_ROOT_UNSIGNED=unsigned/$(9_3_1_PREFIX)root
@@ -190,7 +190,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_4_MKDIR=$(5_4_DIR)/.mkdir
 5_4_DIR=.
 5_4_MKDIR=
-5_4_PREFIX=9.4-
+5_4_PREFIX=.9.4-
 9_4_PREFIX=5.4-
 5_4_ROOT_UNSIGNED=unsigned/$(5_4_PREFIX)root
 9_4_ROOT_UNSIGNED=unsigned/$(9_4_PREFIX)root
@@ -208,7 +208,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_5_MKDIR=$(5_5_DIR)/.mkdir
 5_5_DIR=.
 5_5_MKDIR=
-5_5_PREFIX=9.5-
+5_5_PREFIX=.9.5-
 9_5_PREFIX=5.5-
 5_5_ROOT_SERVERS:=$(foreach LETTER,$(LETTERS),$(5_5_DIR)/$(5_5_PREFIX)$(LETTER))
 9_5_ROOT_SERVERS:=$(foreach LETTER,$(LETTERS),$(5_5_DIR)/$(9_5_PREFIX)$(LETTER))
@@ -223,7 +223,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 
 5_5_1_DIR=.
 5_5_1_MKDIR=
-5_5_1_PREFIX=9.5.1-
+5_5_1_PREFIX=.9.5.1-
 9_5_1_PREFIX=5.5.1-
 5_5_1_ROOT_SERVERS:=$(foreach LETTER,$(LETTERS),$(5_5_1_DIR)/$(5_5_1_PREFIX)$(LETTER).root-servers)
 9_5_1_ROOT_SERVERS:=$(foreach LETTER,$(LETTERS),$(5_5_1_DIR)/$(9_5_1_PREFIX)$(LETTER).root-servers)
@@ -241,7 +241,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_6_MKDIR=$(5_6_DIR)/.mkdir
 5_6_DIR=.
 5_6_MKDIR=
-5_6_PREFIX=9.6-
+5_6_PREFIX=.9.6-
 9_6_PREFIX=5.6-
 5_6_ROOT_UNSIGNED=unsigned/$(5_6_PREFIX)root
 9_6_ROOT_UNSIGNED=unsigned/$(9_6_PREFIX)root
@@ -256,7 +256,7 @@ KEYS=$(ROOT_KEYS) $(ROOT_SERVERS_NET_KEYS)
 #5_6_1_MKDIR=$(5_6_1_DIR)/.mkdir
 5_6_1_DIR=.
 5_6_1_MKDIR=
-5_6_1_PREFIX=9.6.1-
+5_6_1_PREFIX=.9.6.1-
 9_6_1_PREFIX=5.6.1-
 5_6_1_ROOT_UNSIGNED=unsigned/$(5_6_1_PREFIX)root
 9_6_1_ROOT_UNSIGNED=unsigned/$(9_6_1_PREFIX)root
