--- a/auto/ansible/select-scenario-on-root-servers.yml
+++ b/auto/ansible/select-scenario-on-root-servers.yml
@@ -11,7 +11,7 @@
 #            Alternative for the naming scheme scenario.
 #            Scenarios 3, 5 and 6 have a variant.
 #
-# - realips: [ *true* | false ]
+# - realips: [ true | *false* ]
 #            Use in the zones, the same IP addresses for the root servers
 #            as they currently use on the internet. Also the names in the
 #            zones match more closely the ones that were used in section 5
@@ -28,7 +28,7 @@
         - scenario is defined and scenario in ['1', '2', '3', '4', '5', '6']
         - variant is not defined or variant == 'false' or variant == 'true'
         - realips is not defined or realips == 'false' or realips == 'true'
-      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] variant=[*false* | true] realips=[*true* | false]\""
+      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] variant=[*false* | true] realips=[*false* | true]\""
 
   - name: Set variant to boolean value (if given)
     when: variant is defined
@@ -45,10 +45,10 @@
     ansible.builtin.set_fact:
       do_realips: "{{ realips | bool }}"
 
-  - name: Set realips to true (if not given)
+  - name: Set realips to false (if not given)
     when: realips is not defined
     ansible.builtin.set_fact:
-      do_realips: true
+      do_realips: false
 
   - name: Copying root zones scenarios
     ansible.posix.synchronize:
@@ -82,7 +82,7 @@
         - scenario is defined and scenario in ['1', '2', '3', '4', '5', '6']
         - variant is not defined or variant == 'false' or variant == 'true'
         - realips is not defined or realips == 'false' or realips == 'true'
-      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] variant=[*false* | true] realips=[*true* | false]\""
+      fail_msg: "usage: ansible-playbook --extra-vars \"scenario=[1-6] variant=[*false* | true] realips=[*false* | true]\""
 
   - name: Set variant to boolean value (if given)
     when: variant is defined
@@ -99,10 +99,10 @@
     ansible.builtin.set_fact:
       do_realips: "{{ realips | bool }}"
 
-  - name: Set realips to true (if not given)
+  - name: Set realips to false (if not given)
     when: realips is not defined
     ansible.builtin.set_fact:
-      do_realips: true
+      do_realips: false
 
   - name: Set the scenario configuration
     ansible.builtin.include_tasks:
